Comment truncate + Fix TextPage Options + Unloaded volumes
Comments Truncate - https://trello.com/c/glv13WOr
Added Unloaded volumes css class - https://trello.com/c/26tZO2LD
Fixed TextPage Options (affix) - https://trello.com/c/0xW08haH

--- a/src/main/webapp/css/CommentsPanel.css
+++ b/src/main/webapp/css/CommentsPanel.css
@@ -53,8 +53,20 @@ textarea.form-control {
 .commentText {
     margin-top: 10px;
     margin-bottom: 10px;
-    overflow: auto;
     word-wrap: break-word;
+    overflow: auto;
+}
+.commentText.overflowed {
+    overflow:hidden;
+    height: 44px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.comment .expand {
+    margin-left: 90px;
+    margin-top: -10px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 767px) {
